# SwissCoin-Classic

./: .gitignore  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libswisscoinclassicconsensus.pc.in  metrodevx
.tx/: config
METRO/: IMPORTANT.txt  filenames.txt  renamer-x.py  todo.txt
contrib/: README.md  gitian-build.sh  qt_translations.py  swisscoinclassic-cli.bash-completion  swisscoinclassic-qt.pro  swisscoinclassic-tx.bash-completion  swisscoinclassicd.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  rules  (+15 more)
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  SwissCoinClassic-4.0.files  SwissCoinClassic4-Qt.files  SwissCoinClassic4.files  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  (+56 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: SwissCoinClassic4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  navtechinit.cpp  navtechinit.ui  navtechsetup.cpp  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  (+57 more)
src/qt/forms/: helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: swisscoinclassic_af.ts  swisscoinclassic_af_ZA.ts  swisscoinclassic_ar.ts  swisscoinclassic_be_BY.ts  swisscoinclassic_bg.ts  swisscoinclassic_bg_BG.ts  swisscoinclassic_ca.ts  swisscoinclassic_ca@valencia.ts  swisscoinclassic_ca_ES.ts  swisscoinclassic_cs.ts  swisscoinclassic_cs_CZ.ts  swisscoinclassic_cy.ts  swisscoinclassic_da.ts  swisscoinclassic_de.ts  swisscoinclassic_el.ts  swisscoinclassic_el_GR.ts  swisscoinclassic_en.ts  swisscoinclassic_en_GB.ts  swisscoinclassic_eo.ts  swisscoinclassic_es.ts  swisscoinclassic_es_AR.ts  swisscoinclassic_es_CL.ts  swisscoinclassic_es_CO.ts  swisscoinclassic_es_DO.ts  swisscoinclassic_es_ES.ts  swisscoinclassic_es_MX.ts  swisscoinclassic_es_UY.ts  swisscoinclassic_es_VE.ts  swisscoinclassic_et.ts  swisscoinclassic_eu_ES.ts  swisscoinclassic_fa.ts  swisscoinclassic_fa_IR.ts  swisscoinclassic_fi.ts  swisscoinclassic_fr.ts  swisscoinclassic_fr_CA.ts  swisscoinclassic_fr_FR.ts  swisscoinclassic_gl.ts  swisscoinclassic_he.ts  swisscoinclassic_hi_IN.ts  swisscoinclassic_hr.ts  (+45 more)
src/qt/res/: swisscoinclassic-qt-res.rc
src/qt/res/icons/: swisscoinclassic.icns
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h  swisscoinclassicconsensus.cpp  swisscoinclassicconsensus.h
src/secp256k1/src/java/: org_swisscoinclassic_NativeSecp256k1.c  org_swisscoinclassic_NativeSecp256k1.h
src/secp256k1/src/java/org/swisscoinclassic/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+17 more)
src/test/data/: README.md  swisscoinclassic-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  navtech.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+142 files in other folders)
